cadastro de empresa; empresas cadastradas -> identidade visual

--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -404,7 +404,8 @@ table.cadastro-empresa {
 
   li {
     font-weight: bold;
-    color: #353535;
+    cursor: pointer;
+    color: $blue;
   }
 }
 
