editais e contratos (formulario e cadastrados) - identidade visual

--- a/src/components/Shareable/DatePicker/style.scss
+++ b/src/components/Shareable/DatePicker/style.scss
@@ -23,6 +23,7 @@ div.datepicker {
     margin-right: -30px;
     .react-datepicker__input-container {
       input {
+        height: 38px;
         font-size: 14px;
         color: $blackInput;
         &.invalid-field:not(:focus) {
