--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -32,8 +32,8 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --font-family: Roboto !important;
+  --font-family: Roboto !important;
 }
 
 *,
@@ -43,7 +43,7 @@
 }
 
 html {
-  font-family: 'Roboto', sans-serif;;
+  font-family: Roboto !important;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -55,13 +55,13 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Roboto !important;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #686868;
   text-align: left;
-  background-color: #fff;
+
 }
 
 [tabindex="-1"]:focus {
@@ -181,7 +181,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: Roboto !important;
   font-size: 1em;
 }
 
@@ -241,7 +241,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
-  font-family: inherit;
+  font-family: Roboto !important;
   font-size: inherit;
   line-height: inherit;
 }
@@ -5952,7 +5952,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Roboto !important;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6065,7 +6065,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Roboto !important;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -9748,7 +9748,7 @@ button.bg-dark:focus {
 }
 
 .text-monospace {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
+  font-family: Roboto !important;
 }
 
 .text-justify {
@@ -10057,7 +10057,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 .page-title {
-  font-family: Roboto;
+  font-family: Roboto !important;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
