--- a/src/components/AlteracaoDeCardapio/style.scss
+++ b/src/components/AlteracaoDeCardapio/style.scss
@@ -3,3 +3,16 @@
   display: flex;
   align-items: flex-end;
 }
+
+.section-form-datas{
+  display: grid;
+  grid-template-columns: 22% 3% 22% 22% auto;
+  grid-column-gap: 2%;
+
+  .opcao-data{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-bottom: 0.3em;
+  }
+}
