--- a/src/components/AlteracaoDeCardapio/style.scss
+++ b/src/components/AlteracaoDeCardapio/style.scss
@@ -4,6 +4,10 @@
   align-items: flex-end;
 }
 
+.cor-teste{
+  background-color: aquamarine;
+}
+
 .section-form-datas{
   display: grid;
   grid-template-columns: 22% 3% 22% 22% auto;
@@ -15,4 +19,44 @@
     align-items: flex-end;
     margin-bottom: 0.3em;
   }
+}
+
+.section-form-motivo{
+  display: grid;
+  grid-template-columns: 94% auto;
+  grid-column-gap: 2%;
+
+  div{
+    margin: 0;
+    padding: 0
+  }
+}
+
+.descricao-periodos-alimentacao{
+  display: grid;
+  grid-template-columns: 27% 29% 29% auto;
+  grid-column-gap: 2%;
+  margin-bottom: 0.5em;
+
+  div{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+
+.item-periodo-alimentacao{
+  display: grid;
+  grid-template-columns: 27% 29% 29% auto;
+  grid-column-gap: 2%;
+  margin-bottom: 0.5em;
+
+  .checkbox-custom{
+    left: 0 !important;
+  }
+}
+
+.teste{
+  position: absolute;
+  margin-left: 12%;
 }
