--- a/src/components/Shareable/CardListarSolicitacoes/style.scss
+++ b/src/components/Shareable/CardListarSolicitacoes/style.scss
@@ -28,9 +28,13 @@
     font-weight: bold;
     font-size: 12px;
     color: $blackInput;
+    cursor: pointer;
     margin-bottom: 0.3rem;
     span {
       font-weight: normal;
+    }
+    &:hover {
+      text-decoration: underline;
     }
   }
   span.date-time {
