--- a/src/components/AlteracaoDeCardapio/style.scss
+++ b/src/components/AlteracaoDeCardapio/style.scss
@@ -42,6 +42,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    font-size: 14px;
   }
 }
 
@@ -65,5 +66,15 @@
       position: relative;
       margin: 0.5em 0 0 3em;
     }
+  }
+}
+
+.footer-button {
+  display: flex;
+  justify-content: flex-end;
+  margin: 3em 0 2em 0;
+
+  button {
+    margin-left: 1em;
   }
 }
