inversao formulario - removendo borda azul e ajustando altura do datepicker

--- a/src/components/Shareable/DatePicker/style.scss
+++ b/src/components/Shareable/DatePicker/style.scss
@@ -35,6 +35,18 @@ div.datepicker {
   }
 }
 
+.inversao-datepicker {
+  div.datepicker {
+    div.react-datepicker-wrapper {
+      .react-datepicker__input-container {
+        input {
+          height: 35px;
+        }
+      }
+    }
+  }
+}
+
 .input-group {
   &.calendar {
     input {
