--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -459,3 +459,58 @@ div.caption-choices {
     }
   }
 }
+
+.orders-table {
+  width: 100%;
+  th {
+    font-weight: normal;
+    font-size: 14px;
+    color: #686868;
+  }
+  td {
+    font-weight: bold;
+    font-size: 15px;
+    color: #353535;
+    border-bottom: 1px solid #c0c0c0;
+    padding: 10px 0;
+  }
+  tr {
+    th:nth-child(1),
+    td:nth-child(1),
+    th:nth-child(2),
+    td:nth-child(2) {
+      padding-left: 10px;
+      width: 20%;
+    }
+    th:nth-child(3),
+    td:nth-child(3) {
+      width: 39%;
+    }
+    th:nth-child(4) {
+      padding-left: 90px;
+    }
+    td:nth-child(4) {
+      padding-left: 110px;
+      padding-right: 0px;
+    }
+  }
+  thead,
+  tbody {
+    display: block;
+  }
+  tbody {
+    height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+}
+
+.fa-search {
+  &.inside-input {
+    z-index: 1;
+    padding-top: 12px;
+    color: #2881bb;
+    font-size: 20px;
+    position: relative;
+  }
+}
