--- a/src/components/Shareable/Input/style.scss
+++ b/src/components/Shareable/Input/style.scss
@@ -2,6 +2,18 @@
 
 div.input {
   font-size: 14px;
+  &.icon {
+    display: inline-flex;
+    input {
+      width: 300px;
+    }
+    i {
+      color: $blue;
+      z-index: 1;
+      margin-left: -30px;
+      margin-top: 10px;
+    }
+  }
   span.required-asterisk {
     color: $red;
     padding-right: 5px;
