--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,7 @@ $blueIcon: #334d6e;
 $blueSelected: #f2fbfe;
 $blueToastInfo: #0c5460;
 $gray: #686868;
+$grayBackground: #fafafa;
 $grayCard: #eeeeee;
 $grayDisabled: #dadada;
 $grayHeader: #929394;
