--- a/src/components/Permissoes/style.scss
+++ b/src/components/Permissoes/style.scss
@@ -1,6 +1,11 @@
 @import "../../styles/variables.scss";
 
 .permissions {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
   h2 {
     font-weight: bold;
     font-size: 14px;
@@ -17,6 +22,29 @@
       &.rf {
         color: $blue;
         font-weight: 500;
+      }
+    }
+  }
+  .table-users {
+    .titles,
+    .values {
+      border-bottom: 1px solid $grayCard;
+    }
+    .titles {
+      padding-top: 25px;
+      padding-bottom: 8px;
+      color: $gray;
+      font-weight: 500;
+      font-size: 14px;
+    }
+    .values {
+      padding: 18px 0;
+      color: $blackSubtle;
+    }
+    .trash {
+      i {
+        cursor: pointer;
+        color: $grayPlaceholder;
       }
     }
   }
