colocando validacao input qtd alunos e arrumaando fields

--- a/src/components/InclusaoDeAlimentacao/style.scss
+++ b/src/components/InclusaoDeAlimentacao/style.scss
@@ -116,3 +116,12 @@
 .conteudo {
   margin: 0.5em 1em 2em 1em;
 }
+
+.dropdown-heading-value {
+  line-height: 38px !important;
+  position: relative !important;
+}
+
+.quantidade-aluno {
+  height: 40px !important;
+}
