--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -109,3 +109,26 @@ div.input-group.email-sme {
     }
   }
 }
+
+.texto-preto-simples {
+  color: #42474a;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: justify;
+  padding: 5;
+  &-grande {
+    @extend .texto-preto-simples;
+    align-items: center;
+    text-align: center;
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: bold;
+  }
+}
+
+.alinha-direita {
+  display: flex;
+  justify-content: flex-end;
+}
