--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -110,7 +110,7 @@ div.input-group.email-sme {
   }
 }
 
-.texto-preto-simples {
+.texto-simples {
   color: #42474a;
   font-style: normal;
   font-weight: normal;
@@ -118,8 +118,14 @@ div.input-group.email-sme {
   line-height: 16px;
   text-align: justify;
   padding: 5;
+  &-verde {
+    @extend .texto-simples;
+    align-items: center;
+    text-align: center;
+    color: #297805;
+  }
   &-grande {
-    @extend .texto-preto-simples;
+    @extend .texto-simples;
     align-items: center;
     text-align: center;
     font-size: 24px;
@@ -131,4 +137,19 @@ div.input-group.email-sme {
 .alinha-direita {
   display: flex;
   justify-content: flex-end;
+}
+
+.div-circular-verde {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #297805;
+  border-radius: 50%;
+  width: 7em;
+  height: 7em;
+}
+
+.check-verde {
+  color: #297805;
+
 }
