implementa tela meus dados - layout

--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -267,6 +267,10 @@ div.caption-choices {
   max-width: 90% !important;
 }
 
+.modal-50w {
+  max-width: 50% !important;
+}
+
 .c-pointer {
   cursor: pointer;
 }
