ajustes recuperar senha

--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -180,7 +180,7 @@ div.input-group.email-sme {
   align-items: center;
 
   div {
-    display: grid;
+    display: block;
     grid-auto-rows: auto;
 
     &:first-child {
