--- a/src/components/screens/Relatorios/style.scss
+++ b/src/components/screens/Relatorios/style.scss
@@ -1,21 +1,23 @@
+@import "../../../styles/variables.scss";
+
 div.evolution {
   h2 {
     font-weight: bold;
     font-size: 18px;
-    color: #42474a;
+    color: $blackInput;
   }
   div.graph-and-legend {
     padding: 20px;
-    border: 1px solid #eaedf3;
+    border: 1px solid $grayDisabled;
     div.graph {
-      border-right: 1px solid #c4c4c4;
+      border-right: 1px solid $grayDisabled;
     }
   }
   .legend-unit {
     .title {
       display: inline-flex;
       font-size: 14px;
-      color: #42474a;
+      color: $blackInput;
       div.circle {
         width: 10px;
         height: 10px;
@@ -32,7 +34,7 @@ div.evolution {
     }
     .total {
       font-size: 20px;
-      color: #222222;
+      color: $blackSubtle;
     }
   }
 }
