criando formulario de busca (eslint)

--- a/src/components/screens/Relatorios/style.scss
+++ b/src/components/screens/Relatorios/style.scss
@@ -38,3 +38,109 @@ div.evolution {
     }
   }
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 59% 39%;
+  column-gap: 2%;
+  grid-template-rows: auto;
+
+  .container-left {
+    .container-left-bottom {
+      margin: 1em 0 0 0;
+      display: grid;
+      grid-template-columns: 30% 30% 36%;
+      column-gap: 2%;
+    }
+  }
+
+  label {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 165%;
+    color: #42474a;
+    margin: 0 0 0.5em 0 !important;
+  }
+
+  .container-right {
+    .container-right-bottom {
+      margin: 1em 0 0 0;
+      display: grid;
+      grid-template-columns: 72% 24%;
+      column-gap: 4%;
+
+      .filtrar {
+        display: flex;
+        justify-content: flex-end;
+      }
+    }
+  }
+}
+
+div.datepicker {
+  span.required-asterisk {
+    color: $red;
+    padding-right: 5px;
+  }
+  .react-datepicker__day--selected,
+  .react-datepicker__day--keyboard-selected {
+    background-color: $green;
+  }
+  .react-datepicker__close-icon {
+    display: none;
+  }
+  .fa-calendar-alt {
+    z-index: 0;
+    cursor: text;
+    padding-top: 12px;
+    color: $green;
+    position: relative;
+  }
+  div.react-datepicker-wrapper {
+    width: 150px !important;
+    margin-right: -30px;
+    .react-datepicker__input-container {
+      input {
+        height: 38px;
+        font-size: 14px;
+        color: $blackInput;
+        &.invalid-field:not(:focus) {
+          box-shadow: none;
+          border-color: $red;
+        }
+      }
+    }
+  }
+}
+
+.realtorio-filtro {
+  header {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 165%;
+    color: #686868;
+  }
+
+  .cabecalho {
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+    .cabecalho-esquerdo {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-end;
+    }
+
+    .cabecalho-direito {
+      display: flex;
+      justify-content: flex-end;
+
+      section {
+        display: flex;
+        justify-content: space-around;
+      }
+    }
+  }
+}
