--- a/src/components/screens/DietaEspecial/Escola/style.scss
+++ b/src/components/screens/DietaEspecial/Escola/style.scss
@@ -19,6 +19,13 @@ form.special-diet {
   .attachments {
     .text {
       font-size: 14px;
+      color: #686868;
+    }
+    .card-warning {
+      border: 1px solid $red;
+      color: $red;
+      font-size: 10px;
+      padding: 10px;
     }
     .btn {
       display: flex;
