--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -32,6 +32,7 @@ $red: #a50e05;
 $redAlert: #e21017;
 $redToastError: #721c24;
 $redBackgroundToastError: #f8d7da;
+$yellow: #fdc500;
 $yellowBackgroundToastWarning: #fff3cd;
 $yellowToastWarning: #856404;
 $white: #ffffff;
