--- a/src/components/screens/Cadastros/CadastroTipoAlimentacao/style.scss
+++ b/src/components/screens/Cadastros/CadastroTipoAlimentacao/style.scss
@@ -27,7 +27,7 @@
 .conteudo-wizard {
   margin-top: 2em;
   display: grid;
-  grid-template-columns: 39% 58%;
+  grid-template-columns: 31% 66%;
   column-gap: 3%;
 
   .titulo-combo {
@@ -39,8 +39,30 @@
     border: 1px solid #d9d9d9;
     box-sizing: border-box;
     border-radius: 4px;
+    height: 300px;
 
-    height: 200px;
+    ul {
+      list-style: none;
+      padding: 0.5em 0.5em;
+      margin: 0;
+      height: 100%;
+
+      li {
+        font-size: 14px;
+        line-height: 16px;
+        color: #686868;
+        margin: 0.5em 0;
+        cursor: pointer;
+        height: 30px;
+        padding-left: 5px;
+        padding-top: 8px;
+      }
+
+      li:hover {
+        border-radius: 4px;
+        box-shadow: 2px 2px 3px #dadada;
+      }
+    }
   }
 
   .combo-tipo-alimentacao {
@@ -76,6 +98,28 @@
         }
       }
 
+      .descricao-desabilitado {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        height: 35px;
+        background: #ffffff;
+        border: 1px solid #dadada;
+        box-sizing: border-box;
+        border-radius: 4px;
+        padding: 0 0.3em;
+
+        nav {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 16px;
+
+          color: #686868;
+        }
+      }
+
       .acao {
         display: grid;
         grid-template-columns: 40% 40%;
@@ -89,6 +133,16 @@
           border-radius: 3px;
           border: 1px solid #086397;
           cursor: pointer;
+        }
+      }
+
+      .impedir-adicionar {
+        .fa-plus-circle {
+          border: 1px solid #dadada;
+          box-sizing: border-box;
+          border-radius: 3px;
+          cursor: default;
+          color: #dadada;
         }
       }
     }
