--- a/src/components/screens/Cadastros/CadastroTipoAlimentacao/style.scss
+++ b/src/components/screens/Cadastros/CadastroTipoAlimentacao/style.scss
@@ -24,396 +24,303 @@
   }
 }
 
-.wizard-container {
+.conteudo-wizard {
+  margin-top: 2em;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: 31% 66%;
+  column-gap: 3%;
 
-  a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
-    display: flex;
-    align-items: center;
-    color: #42474a;
+  .titulo-combo {
+    margin-bottom: 0.5em;
+  }
+
+  .conteudo-tipo-alimentacao {
+    background: #ffffff;
     border: 1px solid #d9d9d9;
-    height: 40px;
-    position: relative;
+    box-sizing: border-box;
+    border-radius: 4px;
+    height: 300px;
 
-    span {
-      position: absolute;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
+    ul {
+      list-style: none;
+      padding: 0.5em 0.5em;
+      margin: 0;
       height: 100%;
+
+      li {
+        font-size: 14px;
+        line-height: 16px;
+        color: #686868;
+        margin: 0.5em 0;
+        cursor: pointer;
+        height: 30px;
+        padding-left: 5px;
+        padding-top: 8px;
+      }
+
+      li:hover {
+        border-radius: 4px;
+        box-shadow: 2px 2px 3px #dadada;
+      }
     }
   }
 
-  a:nth-of-type(1) {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
+  .combo-tipo-alimentacao {
+    .item-combo {
+      display: grid;
+      grid-template-columns: 76% 20%;
+      column-gap: 4%;
+      margin-top: 0.8em;
 
-  a:last-child {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
+      &:first-child {
+        margin-top: 0;
+      }
 
-  a:link {
-    text-decoration: none;
-  }
-
-  a:hover {
-    text-decoration: none;
-    color: #42474a;
-  }
-
-  a.current-step {
-    border: 1px solid #0c6b45;
-    border-left: 0px;
-  }
-
-  a.current-step:nth-of-type(1) {
-    border: 1px solid #0c6b45;
-  }
-
-  a.passed-step {
-    border-top: 1px solid #0c6b45;
-    border-bottom: 1px solid #0c6b45;
-    border-left: 1px solid #0c6b45;
-    background: #0c6b45;
-    color: #fff;
-  }
-
-  a.next-step {
-    cursor: default;
-    background: #f5f6f8;
-    color: #9e9e9e;
-    font-weight: normal;
-  }
-}
-
-.modal-header-body {
-  margin: 0.5em 1em;
-}
-
-.modal-wizard {
-  margin: 2em 1em;
-
-  a.current-step {
-    border: 1px solid #0c6b45;
-  }
-
-  a.next-step {
-    cursor: pointer;
-    background: #ffffff;
-    color: #686868;
-    font-weight: bold;
-    opacity: 0.5;
-    border: 1px solid #d9d9d9;
-  }
-
-  a.passed-step {
-    cursor: pointer;
-    background: #ffffff;
-    color: #686868;
-    font-weight: bold;
-    opacity: 0.5;
-    border: 1px solid #d9d9d9;
-  }
-}
-
-.descricao {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 18px;
-  margin: 0.5em 1em;
-  color: #686868;
-  margin-bottom: 1em;
-}
-
-.detalhe-alimentacao {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  width: 80%;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 18px;
-  margin: 0.5em 1em 2em 1em;
-  color: #686868;
-}
-
-.titulo-descricao {
-  font-weight: normal;
-}
-
-.adicionar-alimentacao {
-  text-decoration: none;
-  margin: 0.5em 0 0 0.5em;
-
-  span {
-    color: #dadada;
-  }
-}
-
-.botao-footer {
-  display: flex;
-  justify-content: flex-end;
-  margin: 2em 0 6em 0;
-
-  .desabilitado {
-    color: #dadada !important;
-    border: 1px solid #dadada !important;
-    background-color: transparent !important;
-  }
-}
-
-.botao-footer-modal {
-  display: flex;
-  justify-content: flex-end;
-  margin: 0.5em 1em 1em 1em;
-}
-
-.conteudo-step {
-  margin-top: 2em;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 30% 31% 5% 31%;
-  grid-column-gap: 1%;
-  grid-row-gap: 10px;
-  grid-template-rows: 1.5em auto;
-
-  // div {
-  //   border: 1px solid black;
-  // }
-
-  nav {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-
-    color: #42474a;
-  }
-
-  .itens-tipo-alimentacao {
-    display: grid;
-
-    a {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      border: 1px solid #dadada;
-      border-radius: 4px;
-      min-height: 40px;
-      height: auto;
-      margin: 0.5em 0 0 0;
-      padding-left: 1em;
-      text-decoration: none;
-
-      span {
+      .descricao {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        margin-right: 1em;
-        font-size: 1em;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        height: 35px;
+        background: #ffffff;
+        border: 1px solid #82b7e8;
+        box-sizing: border-box;
+        border-radius: 4px;
+        padding: 0 0.3em;
+
+        nav {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 16px;
+
+          color: #686868;
+        }
+      }
+
+      .descricao-desabilitado {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        height: 35px;
+        background: #ffffff;
+        border: 1px solid #dadada;
+        box-sizing: border-box;
+        border-radius: 4px;
+        padding: 0 0.3em;
+
+        nav {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 16px;
+
+          color: #686868;
+        }
+      }
+
+      .acao {
+        display: grid;
+        grid-template-columns: 40% 40%;
+        column-gap: 20%;
 
         i {
           display: flex;
           align-items: center;
           justify-content: center;
-          border: 1px solid #52c41a;
-          width: 1.9em;
-          max-height: 22px;
-          border-radius: 50%;
-          color: #fff;
-          background: #52c41a;
-          font-size: 11px;
+          color: #086397;
+          border-radius: 3px;
+          border: 1px solid #086397;
+          cursor: pointer;
         }
       }
-    }
-    .passou {
-      color: #42474a;
-    }
 
-    .ativo {
-      color: #42474a;
-      border: 1px solid #82b7e8;
-      font-weight: bold;
-    }
-
-    .inativo {
-      cursor: default;
-      background: #f5f6f8;
-      border: 1px solid #dadada;
-      font-weight: 500;
-      color: rgb(192, 192, 192);
-    }
-
-    a:first-child {
-      margin: 0;
-    }
-  }
-
-  .itens-possibilidades {
-    background: #ffffff;
-    border: 1px solid #d9d9d9;
-    border-radius: 4px;
-
-    .input-possibilidade {
-      margin: 0.5em;
-
-      input[type="checkbox"] {
-        display: none;
-      }
-
-      label {
-        cursor: pointer;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 16px;
-
-        color: #686868;
-      }
-
-      input[type="checkbox"] + label:before {
-        border: 1px solid #828688;
-        content: "\00a0";
-        font-style: normal;
-        font-weight: normal;
-        font-size: 18px;
-        line-height: 21px;
-        display: inline-flex;
-        align-items: center;
-        text-align: center;
-        height: 16px;
-        margin: 0 0.25em 0 0;
-        padding: 0;
-        vertical-align: top;
-        width: 16px;
-        border-radius: 4px;
-      }
-
-      input[type="checkbox"]:checked + label:before {
-        background: #198459;
-        color: #fff;
-        content: "\2713";
-        text-align: center;
-      }
-
-      input[type="checkbox"]:checked + label:after {
-        font-weight: bold;
-      }
-    }
-  }
-
-  .funcoes {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    a {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: 1px solid rgba(0, 0, 0, 0.15);
-      border-radius: 4px;
-      width: 70%;
-      min-height: 30px;
-      text-decoration: none;
-
-      i {
-        color: rgba(0, 0, 0, 0.25);
-      }
-    }
-
-    a:first-child {
-      margin-bottom: 0.5em;
-    }
-
-    .ativo-pass {
-      background: #198459;
-
-      i {
-        color: #ffffff;
-      }
-    }
-  }
-
-  .itens-combinacoes {
-    background: #f5f6f8;
-    border: 1px solid #dadada;
-    box-sizing: border-box;
-    border-radius: 4px;
-  }
-
-  .itens-combinacoes-check {
-    background: #ffffff;
-    border: 1px solid #d9d9d9;
-    box-sizing: border-box;
-    border-radius: 4px;
-
-    .input-possibilidade {
-      margin: 0.5em;
-
-      input[type="checkbox"] {
-        display: none;
-      }
-
-      label {
-        cursor: pointer;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 16px;
-
-        color: #686868;
-      }
-
-      input[type="checkbox"] + label:before {
-        border: 1px solid #828688;
-        content: "\00a0";
-        font-style: normal;
-        font-weight: normal;
-        font-size: 18px;
-        line-height: 21px;
-        display: inline-flex;
-        align-items: center;
-        text-align: center;
-        height: 16px;
-        margin: 0 0.25em 0 0;
-        padding: 0;
-        vertical-align: top;
-        width: 16px;
-        border-radius: 4px;
-      }
-
-      input[type="checkbox"]:checked + label:before {
-        background: #198459;
-        color: #fff;
-        content: "\2713";
-        text-align: center;
-      }
-
-      input[type="checkbox"]:checked + label:after {
-        font-weight: bold;
+      .impedir-adicionar {
+        .fa-plus-circle {
+          border: 1px solid #dadada;
+          box-sizing: border-box;
+          border-radius: 3px;
+          cursor: default;
+          color: #dadada;
+        }
       }
     }
   }
 }
 
-.modal-header-body {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 19px;
+.conteudo-wizard-substituicoes {
+  margin-top: 2em;
+  display: grid;
+  grid-template-columns: 25% 25% 46%;
+  column-gap: 2%;
 
-  color: #686868;
+  .titulo-combo-substituicoes {
+    margin-bottom: 0.5em;
+  }
+
+  .lista-combo-alimentacoes {
+    height: 300px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      display: flex;
+      align-items: center;
+      padding-left: 1em;
+      height: 40px;
+      background: #ffffff;
+      border: 1px solid #82b7e8;
+      box-sizing: border-box;
+      border-radius: 5px;
+      margin-bottom: 0.5em;
+
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 16px;
+      /* identical to box height */
+
+      display: flex;
+      align-items: center;
+
+      color: #42474a;
+    }
+
+    .tipo-alimentacao-inativo {
+      background: #f5f6f8;
+      border: 1px solid #dadada;
+      box-sizing: border-box;
+      border-radius: 4px;
+
+      color: #dadada;
+    }
+  }
+
+  .tipos-alimentacao-substituicoes {
+    list-style: none;
+    padding: 0.5em 0.5em;
+    margin: 0;
+    height: 100%;
+
+    background: #ffffff;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    height: 300px;
+
+    li {
+      font-size: 14px;
+      line-height: 16px;
+      color: #686868;
+      margin: 0.5em 0;
+      cursor: pointer;
+      height: 30px;
+      padding-left: 5px;
+      padding-top: 8px;
+    }
+
+    li:hover {
+      border-radius: 4px;
+      box-shadow: 2px 2px 3px #dadada;
+    }
+  }
+
+  .combo-tipo-alimentacao {
+    .item-combo {
+      display: grid;
+      grid-template-columns: 76% 20%;
+      column-gap: 4%;
+      margin-top: 0.8em;
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      .descricao {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        height: 35px;
+        background: #ffffff;
+        border: 1px solid #82b7e8;
+        box-sizing: border-box;
+        border-radius: 4px;
+        padding: 0 0.3em;
+
+        nav {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 16px;
+
+          color: #686868;
+        }
+      }
+
+      .descricao-desabilitado {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        height: 35px;
+        background: #ffffff;
+        border: 1px solid #dadada;
+        box-sizing: border-box;
+        border-radius: 4px;
+        padding: 0 0.3em;
+
+        nav {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 16px;
+
+          color: #686868;
+        }
+      }
+
+      .acao {
+        display: grid;
+        grid-template-columns: 40% 40%;
+        column-gap: 20%;
+
+        i {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: #086397;
+          border-radius: 3px;
+          border: 1px solid #086397;
+          cursor: pointer;
+        }
+      }
+
+      .impedir-adicionar {
+        .fa-plus-circle {
+          border: 1px solid #dadada;
+          box-sizing: border-box;
+          border-radius: 3px;
+          cursor: default;
+          color: #dadada;
+        }
+      }
+    }
+  }
+}
+
+.rodape-botoes {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 2em;
+
+  .botao-desabilitado {
+    border: 1px solid #dadada !important;
+    color: #dadada !important;
+
+    &:hover {
+      background-color: transparent !important;
+      cursor: default;
+    }
+  }
 }
