--- a/src/components/screens/Cadastros/CadastroTipoAlimentacao/style.scss
+++ b/src/components/screens/Cadastros/CadastroTipoAlimentacao/style.scss
@@ -357,10 +357,124 @@
   .botao-desabilitado {
     border: 1px solid #dadada !important;
     color: #dadada !important;
+    background-color: transparent !important;
 
     &:hover {
       background-color: transparent !important;
       cursor: default;
+    }
+  }
+}
+
+.relatorio-tipos-alimentacoes {
+  header {
+    font-size: 14px;
+    line-height: 16px;
+    color: #42474a;
+  }
+
+  article {
+    background: #ffffff;
+    border: 1px solid #e8e8e8;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    margin: 1em 0;
+
+    header {
+      padding: 1.5em 1.5em;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 0.01em;
+      color: #686868;
+      border-bottom: 1px solid #ebeff2;
+    }
+
+    .periodo-fechado {
+      .detalhamento-vinculo-periodo-escolar {
+        background: #f2fbfe;
+        border-bottom: 1px solid #dadada;
+        padding: 1.5em;
+
+        .titulo-tipo-alimentacao {
+          font-weight: bold;
+          font-size: 14px;
+          padding-bottom: 1em;
+          color: #686868;
+        }
+
+        .tipos-alimentacoes-periodo {
+          display: grid;
+          grid-template-columns: 50% 50%;
+
+          nav {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 18px;
+            color: #686868;
+          }
+
+          .dado-tipo-alimentacao {
+            font-weight: bold;
+            font-size: 14px;
+            line-height: 18px;
+            color: #686868;
+          }
+        }
+      }
+
+      .titulo-periodo-tipo-ue {
+        border-bottom: 1px solid #ebeff2;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 1em 0 1.5em;
+        height: 50px;
+
+        .descricao-periodo-tipo-ue {
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 18px;
+          /* or 129% */
+
+          display: flex;
+          align-items: center;
+
+          /* table_black */
+
+          color: #323c47;
+        }
+
+        nav {
+          width: 70px;
+          display: grid;
+          grid-template-columns: 50% 50%;
+
+          i {
+            font-weight: 900;
+            font-size: 16px;
+            line-height: 18px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            color: #a4a4a4;
+            cursor: pointer;
+          }
+
+          .editar {
+            color: #035d96;
+          }
+        }
+      }
+      .titulo-ativo {
+        background: #f2fbfe;
+        border-bottom: 1px solid #dadada;
+
+        .descricao-periodo-tipo-ue {
+          font-weight: bold;
+        }
+      }
     }
   }
 }
