Adicionados botões de imprimir e exportar

--- a/src/components/screens/Relatorios/components/style.scss
+++ b/src/components/screens/Relatorios/components/style.scss
@@ -97,3 +97,12 @@
     }
   }
 }
+
+.fonte-titulo {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 165%;
+  color: #42474a;
+}
