adiciona flag em nutricionista no cadastro de empresa para este ser um administrador

--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -247,6 +247,7 @@ table.cadastro-empresa {
   .descricao {
     font-weight: bold;
     padding-right: 10px;
+    margin: 0;
   }
   .valor-desc {
     font-weight: bold;
